Change ZCTA to zcta

--- a/01_extract_census/01_extract_census.ipynb
+++ b/01_extract_census/01_extract_census.ipynb
@@ -92,7 +92,7 @@
     "    \"B19301_001E\": \"per_capita_income\",\n",
     "    \"B17001_002E\": \"poverty_count\",\n",
     "    \"B23025_005E\": \"unemployment_count\",\n",
-    "    \"zip code tabulation area\": \"ZCTA\"})"
+    "    \"zip code tabulation area\": \"zcta\"})"
    ]
   },
   {
