--- a/02_transform_census/02_transform_census.ipynb
+++ b/02_transform_census/02_transform_census.ipynb
@@ -46,7 +46,7 @@
        "      <th>per_capita_income</th>\n",
        "      <th>poverty_count</th>\n",
        "      <th>unemployment_count</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -112,7 +112,7 @@
        "3                  12832.0      6437.0        43.3             5943.0   \n",
        "4                  19309.0     27073.0        42.1            10220.0   \n",
        "\n",
-       "   poverty_count  unemployment_count   ZCTA  \n",
+       "   poverty_count  unemployment_count   zcta  \n",
        "0        10772.0              2316.0  00601  \n",
        "1        19611.0              1927.0  00602  \n",
        "2        24337.0              3124.0  00603  \n",
@@ -127,7 +127,7 @@
    ],
    "source": [
     "# Read in census csv\n",
-    "census_data = pd.read_csv(\"../00_input/census_data.csv\", dtype={'ZCTA': 'str'})\n",
+    "census_data = pd.read_csv(\"../00_input/census_data.csv\", dtype={'zcta': 'str'})\n",
     "census_data.head()"
    ]
   },
@@ -155,7 +155,7 @@
    ],
    "source": [
     "# Test ZCTA length \n",
-    "zcta_length = census_data.ZCTA.apply(len)\n",
+    "zcta_length = census_data.zcta.apply(len)\n",
     "print(f\"Max zcta length is {zcta_length.max()}.\")\n",
     "print(f\"Min zcta length is {zcta_length.min()}.\")"
    ]
@@ -178,7 +178,7 @@
    ],
    "source": [
     "# Test ZCTA uniqueness\n",
-    "census_data.ZCTA.is_unique"
+    "census_data.zcta.is_unique"
    ]
   },
   {
@@ -216,7 +216,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -281,7 +281,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -303,7 +303,7 @@
    ],
    "source": [
     "# Reorder the columns \n",
-    "census_data = census_data[[\"ZCTA\", \"population\", \"median_age\", \"median_household_income\", \"per_capita_income\",\n",
+    "census_data = census_data[[\"zcta\", \"population\", \"median_age\", \"median_household_income\", \"per_capita_income\",\n",
     "                           \"poverty_count\", \"unemployment_count\"]]\n",
     "census_data.head()"
    ]
@@ -336,7 +336,7 @@
       "Data columns (total 7 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   ZCTA                     33120 non-null  object \n",
+      " 0   zcta                     33120 non-null  object \n",
       " 1   population               33120 non-null  float64\n",
       " 2   median_age               33120 non-null  float64\n",
       " 3   median_household_income  33085 non-null  float64\n",
@@ -659,7 +659,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -724,7 +724,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      ZCTA  population   median_age  median_household_income  \\\n",
+       "      zcta  population   median_age  median_household_income  \\\n",
        "110  00950         0.0 -666666666.0             -666666666.0   \n",
        "111  00951         0.0 -666666666.0             -666666666.0   \n",
        "167  01066         9.0 -666666666.0             -666666666.0   \n",
@@ -837,7 +837,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -902,7 +902,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -982,7 +982,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -1497,7 +1497,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        ZCTA  population  median_age  median_household_income  \\\n",
+       "        zcta  population  median_age  median_household_income  \\\n",
        "33064  99826       416.0        52.4                  80000.0   \n",
        "33065  99827      2565.0        45.2                  63882.0   \n",
        "33066  99829       800.0        46.4                  63750.0   \n",
@@ -1649,7 +1649,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -1714,7 +1714,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -1841,7 +1841,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -1906,7 +1906,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -1994,7 +1994,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -2059,7 +2059,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      ZCTA  population  median_age  median_household_income  \\\n",
+       "      zcta  population  median_age  median_household_income  \\\n",
        "42   00694        69.0        73.6             -666666666.0   \n",
        "86   00786       348.0        64.0             -666666666.0   \n",
        "107  00934        79.0        32.8             -666666666.0   \n",
@@ -2154,7 +2154,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -2280,7 +2280,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        ZCTA  population  median_age  median_household_income  \\\n",
+       "        zcta  population  median_age  median_household_income  \\\n",
        "0      00601     17242.0        40.5                  13092.0   \n",
        "1      00602     38442.0        42.3                  16358.0   \n",
        "2      00603     48814.0        41.1                  16603.0   \n",
@@ -2338,7 +2338,7 @@
    ],
    "source": [
     "# Count the number of unique ZCTAs in the dataframe\n",
-    "len(clean_census['ZCTA'].unique())"
+    "len(clean_census['zcta'].unique())"
    ]
   },
   {
@@ -2385,7 +2385,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>zip_code</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2419,7 +2419,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code   ZCTA\n",
+       "  zip_code   zcta\n",
        "0    00501  11742\n",
        "1    00544  11742\n",
        "2    00601  00601\n",
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -2466,7 +2466,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -2537,7 +2537,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -2552,14 +2552,14 @@
        "4        24337.0              3124.0    00605  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merge the zip_to_zcta df with the census data frame using an outer join \n",
-    "zcta_census = pd.merge(clean_census, zip_to_zcta_df, how=\"outer\", on=\"ZCTA\")\n",
+    "zcta_census = pd.merge(clean_census, zip_to_zcta_df, how=\"outer\", on=\"zcta\")\n",
     "zcta_census.head()"
    ]
   },
@@ -2587,7 +2587,7 @@
       "Data columns (total 8 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   ZCTA                     41099 non-null  object \n",
+      " 0   zcta                     41099 non-null  object \n",
       " 1   population               40297 non-null  float64\n",
       " 2   median_age               40297 non-null  float64\n",
       " 3   median_household_income  38669 non-null  float64\n",
@@ -2633,7 +2633,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -2660,7 +2660,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        ZCTA  population  median_age  median_household_income  \\\n",
+       "        zcta  population  median_age  median_household_income  \\\n",
        "38108  95314        95.0        19.4                      NaN   \n",
        "\n",
        "       per_capita_income  poverty_count  unemployment_count zip_code  \n",
@@ -2702,7 +2702,7 @@
    ],
    "source": [
     "# Identify the ZCTA to remove from clean_census\n",
-    "zcta_to_remove = zcta_census[zcta_census[\"zip_code\"].isnull()][\"ZCTA\"].to_list()\n",
+    "zcta_to_remove = zcta_census[zcta_census[\"zip_code\"].isnull()][\"zcta\"].to_list()\n",
     "zcta_to_remove"
    ]
   },
@@ -2734,7 +2734,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -2872,7 +2872,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        ZCTA  population  median_age  median_household_income  \\\n",
+       "        zcta  population  median_age  median_household_income  \\\n",
        "0      00601     17242.0        40.5                  13092.0   \n",
        "1      00602     38442.0        42.3                  16358.0   \n",
        "2      00603     48814.0        41.1                  16603.0   \n",
@@ -2908,7 +2908,7 @@
    ],
    "source": [
     "# Remove the above ZCTA from the census table and save newly merged dataframe \n",
-    "final_census = zcta_census[~zcta_census[\"ZCTA\"].isin(zcta_to_remove)].copy()\n",
+    "final_census = zcta_census[~zcta_census[\"zcta\"].isin(zcta_to_remove)].copy()\n",
     "final_census"
    ]
   },
@@ -2938,7 +2938,7 @@
       "Data columns (total 8 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   ZCTA                     41098 non-null  object \n",
+      " 0   zcta                     41098 non-null  object \n",
       " 1   population               40296 non-null  float64\n",
       " 2   median_age               40296 non-null  float64\n",
       " 3   median_household_income  38669 non-null  float64\n",
@@ -2982,7 +2982,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -3053,7 +3053,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -3075,7 +3075,7 @@
    ],
    "source": [
     "# Drop ZCTA duplicates \n",
-    "final_census.drop_duplicates(subset = \"ZCTA\", keep = \"first\", inplace = True)\n",
+    "final_census.drop_duplicates(subset = \"zcta\", keep = \"first\", inplace = True)\n",
     "final_census.head()"
    ]
   },
@@ -3093,7 +3093,7 @@
       "Data columns (total 8 columns):\n",
       " #   Column                   Non-Null Count  Dtype  \n",
       "---  ------                   --------------  -----  \n",
-      " 0   ZCTA                     33166 non-null  object \n",
+      " 0   zcta                     33166 non-null  object \n",
       " 1   population               32458 non-null  float64\n",
       " 2   median_age               32458 non-null  float64\n",
       " 3   median_household_income  30891 non-null  float64\n",
@@ -3137,7 +3137,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -3263,7 +3263,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        ZCTA  population  median_age  median_household_income  \\\n",
+       "        zcta  population  median_age  median_household_income  \\\n",
        "0      00601     17242.0        40.5                  13092.0   \n",
        "1      00602     38442.0        42.3                  16358.0   \n",
        "2      00603     48814.0        41.1                  16603.0   \n",
