--- a/02_transform_restaurant/02_transform_restaurant_rouhong_kat-TRACEY.ipynb
+++ b/02_transform_restaurant/02_transform_restaurant_rouhong_kat-TRACEY.ipynb
@@ -936,7 +936,7 @@
        "      <th>zip_code</th>\n",
        "      <th>PO_NAME</th>\n",
        "      <th>STATE</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -980,7 +980,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code     PO_NAME STATE   ZCTA\n",
+       "  zip_code     PO_NAME STATE   zcta\n",
        "0    00501  Holtsville    NY  11742\n",
        "1    00544  Holtsville    NY  11742\n",
        "2    00601    Adjuntas    PR  00601\n",
@@ -1016,7 +1016,7 @@
       " 0   zip_code  41098 non-null  object\n",
       " 1   PO_NAME   41098 non-null  object\n",
       " 2   STATE     41098 non-null  object\n",
-      " 3   ZCTA      41098 non-null  object\n",
+      " 3   zcta      41098 non-null  object\n",
       "dtypes: object(4)\n",
       "memory usage: 1.3+ MB\n"
      ]
@@ -1058,7 +1058,7 @@
        "      <th>state</th>\n",
        "      <th>PO_NAME</th>\n",
        "      <th>STATE</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1112,7 +1112,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code          city state       PO_NAME STATE   ZCTA\n",
+       "  zip_code          city state       PO_NAME STATE   zcta\n",
        "0    70301     Thibodaux    LA     Thibodaux    LA  70301\n",
        "1    37863  Pigeon Forge    TN  Pigeon Forge    TN  37863\n",
        "2    30260        Morrow    GA        Morrow    GA  30260\n",
@@ -1150,7 +1150,7 @@
       " 2   state     5426 non-null   object\n",
       " 3   PO_NAME   5426 non-null   object\n",
       " 4   STATE     5426 non-null   object\n",
-      " 5   ZCTA      5426 non-null   object\n",
+      " 5   zcta      5426 non-null   object\n",
       "dtypes: object(6)\n",
       "memory usage: 296.7+ KB\n"
      ]
@@ -1199,7 +1199,7 @@
        "      <th>state</th>\n",
        "      <th>PO_NAME</th>\n",
        "      <th>STATE</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1361,7 +1361,7 @@
        "</div>"
       ],
       "text/plain": [
-       "     zip_code                   city state               PO_NAME STATE   ZCTA\n",
+       "     zip_code                   city state               PO_NAME STATE   zcta\n",
        "112     32435       DeFuniak Springs    FL      Defuniak Springs    FL  32435\n",
        "308     32720                 DeLand    FL                Deland    FL  32720\n",
        "317     27103          Winston-Salem    NC         Winston Salem    NC  27103\n",
