--- a/02_transform_zip_zcta/02_transform_zip_zcta.ipynb
+++ b/02_transform_zip_zcta/02_transform_zip_zcta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4      Zip Matches ZCTA  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "41106  territory zip, no ZCTA available  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "41098"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "33166"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -627,14 +627,15 @@
        "[12878 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Overview of the duplicated ZCTAs\n",
-    "duplicate_zcta_rows = zip_to_zcta_df[zip_to_zcta_df.duplicated(subset=[\"ZCTA\"], keep=False)].sort_values(by=\"ZCTA\")\n",
+    "duplicate_zcta_rows = zip_to_zcta_df[zip_to_zcta_df.duplicated(\n",
+    "    subset=[\"ZCTA\"], keep=False)].sort_values(by=\"ZCTA\")\n",
     "duplicate_zcta_rows"
    ]
   },
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +675,7 @@
        "      <th>zip_code</th>\n",
        "      <th>PO_NAME</th>\n",
        "      <th>STATE</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -718,7 +719,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code     PO_NAME STATE   ZCTA\n",
+       "  zip_code     PO_NAME STATE   zcta\n",
        "0    00501  Holtsville    NY  11742\n",
        "1    00544  Holtsville    NY  11742\n",
        "2    00601    Adjuntas    PR  00601\n",
@@ -726,20 +727,21 @@
        "4    00603   Aguadilla    PR  00603"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Export a zip_to_zcta table with zip_code, po_name, state, ZCTA to match against zip_code, city and state in the zip_code table\n",
-    "short_zip_zcta = zip_to_zcta_df[[\"ZIP_CODE\", \"PO_NAME\", \"STATE\", \"ZCTA\"]].rename(columns={\"ZIP_CODE\": \"zip_code\"})\n",
+    "short_zip_zcta = zip_to_zcta_df[[\"ZIP_CODE\", \"PO_NAME\", \"STATE\", \"ZCTA\"]].rename(\n",
+    "    columns={\"ZIP_CODE\": \"zip_code\", \"ZCTA\": \"zcta\"})\n",
     "short_zip_zcta.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +775,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>zip_code</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -807,7 +809,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code   ZCTA\n",
+       "  zip_code   zcta\n",
        "0    00501  11742\n",
        "1    00544  11742\n",
        "2    00601  00601\n",
@@ -815,20 +817,20 @@
        "4    00603  00603"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Export a final zip_to_zcta table to load into the database\n",
-    "final_zcta = short_zip_zcta[[\"zip_code\", \"ZCTA\"]]\n",
+    "final_zcta = short_zip_zcta[[\"zip_code\", \"zcta\"]]\n",
     "final_zcta.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
