--- a/03_load/03_load.ipynb
+++ b/03_load/03_load.ipynb
@@ -8,11 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Python SQL toolkit and Object Relational Mapper\n",
-    "import sqlalchemy\n",
-    "from sqlalchemy.ext.automap import automap_base\n",
-    "from sqlalchemy.orm import Session\n",
-    "from sqlalchemy import create_engine, inspect, func, distinct\n",
+    "# SQL Alchemy\n",
+    "from sqlalchemy import create_engine\n",
     "\n",
     "# Import password authentication for the postgresql database\n",
     "from config import password"
@@ -43,7 +40,7 @@
     {
      "data": {
       "text/plain": [
-       "['zip_code', 'zip_zcta', 'census', 'restaurant', 'restaurant_address']"
+       "['zip', 'zip_zcta', 'census', 'restaurant', 'restaurant_address']"
       ]
      },
      "execution_count": 3,
@@ -52,6 +49,7 @@
     }
    ],
    "source": [
+    "# Check for tables\n",
     "engine.table_names()"
    ]
   },
@@ -59,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use pandas to load csv-converted dataframe into database"
+    "### Use pandas to load csv-converted dataframes into database"
    ]
   },
   {
@@ -88,7 +86,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "      <th>population</th>\n",
        "      <th>median_age</th>\n",
        "      <th>median_household_income</th>\n",
@@ -153,7 +151,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    ZCTA  population  median_age  median_household_income  per_capita_income  \\\n",
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
        "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
        "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
        "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
@@ -174,7 +172,7 @@
     }
    ],
    "source": [
-    "census_df = pd.read_csv(\"../02_transform_census/clean_census.csv\", dtype={'ZCTA': 'str'})\n",
+    "census_df = pd.read_csv(\"../02_transform_census/clean_census.csv\", dtype={'zcta': 'str'})\n",
     "census_df.head()"
    ]
   },
@@ -278,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zip_code_df.to_sql(name='zip_code', con=engine, if_exists=\"append\", index=False)"
+    "zip_code_df.to_sql(name='zip', con=engine, if_exists=\"append\", index=False)"
    ]
   },
   {
@@ -308,7 +306,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>zip_code</th>\n",
-       "      <th>ZCTA</th>\n",
+       "      <th>zcta</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -342,7 +340,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  zip_code   ZCTA\n",
+       "  zip_code   zcta\n",
        "0    00501  11742\n",
        "1    00544  11742\n",
        "2    00601  00601\n",
@@ -561,50 +559,465 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reflect Tables into SQLAlchemy ORM"
+    "### Confirm data has been added by querying the tables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zcta</th>\n",
+       "      <th>population</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>median_household_income</th>\n",
+       "      <th>per_capita_income</th>\n",
+       "      <th>poverty_count</th>\n",
+       "      <th>unemployment_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>17242.0</td>\n",
+       "      <td>40.5</td>\n",
+       "      <td>13092.0</td>\n",
+       "      <td>6999.0</td>\n",
+       "      <td>10772.0</td>\n",
+       "      <td>2316.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>38442.0</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>16358.0</td>\n",
+       "      <td>9277.0</td>\n",
+       "      <td>19611.0</td>\n",
+       "      <td>1927.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>48814.0</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>16603.0</td>\n",
+       "      <td>11307.0</td>\n",
+       "      <td>24337.0</td>\n",
+       "      <td>3124.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00606</td>\n",
+       "      <td>6437.0</td>\n",
+       "      <td>43.3</td>\n",
+       "      <td>12832.0</td>\n",
+       "      <td>5943.0</td>\n",
+       "      <td>4163.0</td>\n",
+       "      <td>230.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00610</td>\n",
+       "      <td>27073.0</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>19309.0</td>\n",
+       "      <td>10220.0</td>\n",
+       "      <td>11724.0</td>\n",
+       "      <td>1290.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    zcta  population  median_age  median_household_income  per_capita_income  \\\n",
+       "0  00601     17242.0        40.5                  13092.0             6999.0   \n",
+       "1  00602     38442.0        42.3                  16358.0             9277.0   \n",
+       "2  00603     48814.0        41.1                  16603.0            11307.0   \n",
+       "3  00606      6437.0        43.3                  12832.0             5943.0   \n",
+       "4  00610     27073.0        42.1                  19309.0            10220.0   \n",
+       "\n",
+       "   poverty_count  unemployment_count  \n",
+       "0        10772.0              2316.0  \n",
+       "1        19611.0              1927.0  \n",
+       "2        24337.0              3124.0  \n",
+       "3         4163.0               230.0  \n",
+       "4        11724.0              1290.0  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# reflect an existing database into a new model\n",
-    "Base = automap_base()\n",
-    "\n",
-    "# reflect the tables\n",
-    "Base.prepare(engine, reflect=True)"
+    "pd.read_sql_query('SELECT * FROM census', con=engine).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>zcta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>11742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>00601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>00602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>00603</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  zip_code   zcta\n",
+       "0    00501  11742\n",
+       "1    00544  11742\n",
+       "2    00601  00601\n",
+       "3    00602  00602\n",
+       "4    00603  00603"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "engine.table_names()"
+    "pd.read_sql_query('SELECT * FROM zip_zcta', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>zip_code</th>\n",
+       "      <th>city</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00501</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00544</td>\n",
+       "      <td>Holtsville</td>\n",
+       "      <td>NY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00601</td>\n",
+       "      <td>Adjuntas</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00602</td>\n",
+       "      <td>Aguada</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00603</td>\n",
+       "      <td>Aguadilla</td>\n",
+       "      <td>PR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  zip_code        city state\n",
+       "0    00501  Holtsville    NY\n",
+       "1    00544  Holtsville    NY\n",
+       "2    00601    Adjuntas    PR\n",
+       "3    00602      Aguada    PR\n",
+       "4    00603   Aguadilla    PR"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query('SELECT * FROM zip', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_address_id</th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>street_no</th>\n",
+       "      <th>street_name</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>800</td>\n",
+       "      <td>N Canal Blvd</td>\n",
+       "      <td>70301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>124</td>\n",
+       "      <td>John R Rd</td>\n",
+       "      <td>48083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>909</td>\n",
+       "      <td>N Wood</td>\n",
+       "      <td>75644</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97</td>\n",
+       "      <td>Gateway Blvd</td>\n",
+       "      <td>82901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6557</td>\n",
+       "      <td>S Staples St</td>\n",
+       "      <td>78413</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_address_id  restaurant_id street_no   street_name zip_code\n",
+       "0                      1              1       800  N Canal Blvd    70301\n",
+       "1                      2              1       124     John R Rd    48083\n",
+       "2                      3              1       909        N Wood    75644\n",
+       "3                      4              1        97  Gateway Blvd    82901\n",
+       "4                      5              1      6557  S Staples St    78413"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query('SELECT * FROM restaurant_address', con=engine).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>restaurant_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SONIC Drive In</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Taco Bell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Arby's</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Steak 'n Shake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Wendy's</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   restaurant_id restaurant_name\n",
+       "0              1  SONIC Drive In\n",
+       "1              2       Taco Bell\n",
+       "2              3          Arby's\n",
+       "3              4  Steak 'n Shake\n",
+       "4              5         Wendy's"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql_query('SELECT * FROM restaurant', con=engine).head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import the csv files"
+    "#### What zip_code has the most number of fastfood restaurant?"
    ]
   },
   {
@@ -636,11 +1049,11 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### Load DataFrames into database"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
